Add site-header styles

--- a/index.html
+++ b/index.html
@@ -18,22 +18,25 @@
     
     <!-- Header -->
 
-    <head class="header">
-        <div>
-            <img src="img/logo-icon (1).svg" alt="AnsorMed logo">
-            <a href="#">AnsorMed</a>
-        </div>
-
-        <nav class="site-nav">
-            <ul class="site-nav-items">
-                <li class="site-nav-item"><a href="#">Xizmatlar</a></li>
-                <li class="site-nav-item"><a href="#">Dorila</a></li>
-                <li class="site-nav-item"><a href="#">Asal</a></li>
-                <li class="site-nav-item"><a href="#">Kontaktlar</a></li>
-                <li class="site-nave-item"><a href="#">Blog</a></li>
-            </ul>
-            <a class="button" href="#">Qabulga yozilish</a>
-        </nav>
+    <head class="site-header">
+            <div class="site-header-container container">
+                <a class="site-logo" href="#">
+                    <img class="site-logo-img" src="img/logo-icon (1).svg" alt="AnsorMed logo">
+                    <span class="site-logo-text">AnsorMed</span>
+                </a>
+                
+                <!-- Site Nav -->
+                <nav class="sitenav">
+                    <ul class="sitenav-list">
+                        <li class="sitenav-item"><a class="sitenav-link" href="#">Xizmatlar</a></li>
+                        <li class="sitenav-item"><a class="sitenav-link" href="#">Dorilar</a></li>
+                        <li class="sitenav-item"><a class="sitenav-link" href="#">Asal</a></li>
+                        <li class="sitenav-item"><a class="sitenav-link" href="#">Kontaktlar</a></li>
+                        <li class="sitenav-item"><a class="sitenav-link" href="#">Blog</a></li>
+                    </ul>
+                </nav>
+                <a class="main-link" href="#">Qabulga yozilish</a>
+            </div>
     </head>
 
     <!-- Main -->
