Add site-footer and styles.

--- a/index.html
+++ b/index.html
@@ -96,14 +96,23 @@
     <!-- Footer -->
 
     <footer class="site-footer">
-        <a href="#">AnsorMed</a>
-        <ul class="site-footer-items">
-            <li class="site-footer-item"><a href="#">Xizmatlar</a></li>
-            <li class="site-footer-item"><a href="#">Dorila</a></li>
-            <li class="site-footer-item"><a href="#">Asal</a></li>
-            <li class="site-footer-item"><a href="#">Kontaktlar</a></li>
-            <li class="site-footer-item"><a href="#">Blog</a></li>
-        </ul>
+        <div class="site-footer-container container">
+                <a class="site-logo site-logo-site-footer" href="#">
+                    <img class="site-logo-img" src="img/logo-icon (1).svg" alt="AnsorMed logo">
+                    <span class="site-logo-text">AnsorMed</span>
+                </a>
+                
+                <!-- Site Nav -->
+                <nav class="sitenav sitenav-site-footer">
+                    <ul class="sitenav-list">
+                        <li class="sitenav-item"><a class="sitenav-link" href="#">Xizmatlar</a></li>
+                        <li class="sitenav-item"><a class="sitenav-link" href="#">Dorilar</a></li>
+                        <li class="sitenav-item"><a class="sitenav-link" href="#">Asal</a></li>
+                        <li class="sitenav-item"><a class="sitenav-link" href="#">Kontaktlar</a></li>
+                        <li class="sitenav-item"><a class="sitenav-link" href="#">Blog</a></li>
+                    </ul>
+                </nav>
+            </div>
     </footer>
 </body>
 </html>
