--- a/index.html
+++ b/index.html
@@ -46,13 +46,15 @@
         <!-- Hero -->
         
         <section class="hero">
-            <div class="hero-content">
-                <h2 class="hero-title">Tabiiy davolash usullari yordamida <br>kasalliklardan xalos bo’ling.</br></h2>
-                <p class="hero-text">Hijoma, manual terapiya, zuluk va turli tabiiy giyohlar eng ko’p uchraydigan kasalliklarni yengishda yordam beradi. Sog’ligingizni o’z ishining professionallariga ishonib topshiring.</p>
-                <a class="button" href="#">Qabulga yozilish</a>
-            </div>
+            <div class="hero-container container">
+                <div class="hero-content">
+                    <h2 class="hero-heading">Tabiiy davolash usullari yordamida kasalliklardan xalos bo’ling.</h2>
+                    <p class="hero-text">Hijoma, manual terapiya, zuluk va turli tabiiy giyohlar eng ko’p uchraydigan kasalliklarni yengishda yordam beradi. Sog’ligingizni o’z ishining professionallariga ishonib topshiring.</p>
+                    <a class="main-link main-link-solid" href="#">Qabulga yozilish</a>
+                </div>
 
-            <img src="img/hero-img.png" alt="Hero image" srcset="img/hero-img.png 1x, img/hero-img@2x.png 2x">
+                <img class="hero-img" src="img/hero-img.png" alt="Hero image" width="423" height="504" srcset="img/hero-img.png 1x, img/hero-img@2x.png 2x">
+            </div>
         </section>
 
         <section class="features">
