Add services section

--- a/index.html
+++ b/index.html
@@ -57,32 +57,45 @@
             </div>
         </section>
 
-        <section class="features">
-            <div>
-                <h3 class="features-title">Xizmatlar</h3>
+        <!-- Services -->
 
-                <div class="features-items">
-                    <img src="img/image 1.jpg" alt="Hijoma rasmi" srcset="img/image 1.jpg 1x, img/image 1@.jpg">
-                    <h4 class="features-heading">Hijoma</h4>
-                    <p class="features-text">Imom Termiziy Abdulloh ibn Abbos raziyallohu anhumodan rivoyat qilgan hadisda rasululloh sallallohu alayhi va sallam dedilar: «Sizlar hijoma qiladigan kunlaringizning eng yaxshisi 17, 19 va 21-kunlardir» (bu kunlar hijrij-kamariy hisobdagi oylar kunlaridir).</p>
-                </div>
-                <div class="features-items">
-                    <img src="img/image 2.jpg" alt="Manual terapiya" srcset="img/image 2.jpg 1x, img/image 2@2x.jpg 2x">
-                    <h4 class="features-heading">Manual terapiya</h4>
-                    <p class="features-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla ac metus placerat, pellentesque enim ac, rhoncus lectus. Maecenas et posuere lorem. Fusce sed massa sit amet elit viverra hendrerit.</p>
-                </div>
-                <div class="features-items">
-                    <img src="img/image 3.jpg" alt="Zuluk rasmi" srcset="img/image 3.jpg 1x, img/image 3@2x.jpg 2x">
-                    <h4 class="features-heading">Zuluk bilan davolash</h4>
-                    <p class="features-text">Girudoterapiya (lot. hirūdō — «zuluk» va qad. yun. θεραπεία — «davolash») — ma’lum kasalliklarni dorivor zuluklar (Hirudo medicinalis) yordamida davolash usuli. Fizioterapevtik muolaja, muqobil tibbiyotga oid sanaladi. Bunday zuluklar ushbu kichik sinf chuvchalchanglariga oid yagona tur hisoblanadi, qolganlari shifobaxsh ta’sir ko’rsatmaydi.</p>
-                </div>
-                <div class="features-items">
-                    <img src="img/asal .jpg" alt="Tabiiy dori" srcset="img/asal .jpg 1x, img/asal@2x.jpg 2x">
-                    <h4 class="features-heading">Tabiiy dori vositalari</h4>
-                    <p class="features-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla ac metus placerat, pellentesque enim ac, rhoncus lectus. Maecenas et posuere lorem. Fusce sed massa sit amet elit viverra hendrerit.</p>
-                </div>
+        <section class="index-services">
+            <div class="container">
+                <h2 class="index-services-heading">Xizmatlar</h2>
+                <ul class="index-services-list">
+                    <li class="index-services-item index-service">
+                        <img class="index-service-img" src="img/image 1.jpg" alt="Hijoma davolash" width="200" height="200" srcset="img/image 1.jpg 1x, img/image 1@2x.jpg 2x">
+                        <div class="index-service-content">
+                            <h3 class="index-service-title">Hijoma</h3>
+                            <p class="index-service-description">Imom Termiziy Abdulloh ibn Abbos raziyallohu anhumodan rivoyat qilgan hadisda rasululloh sallallohu alayhi va sallam dedilar: «Sizlar hijoma qiladigan kunlaringizning eng yaxshisi 17, 19 va 21-kunlardir» (bu kunlar hijrij-kamariy hisobdagi oylar kunlaridir).</p>
+                        </div>
+                    </li>
+                    <li class="index-services-item index-service">
+                        <img class="index-service-img" src="img/image 2.jpg" alt="Manual terapiya davolash" width="200" height="200" srcset="img/image 2.jpg 1x, img/image 2@2x.jpg 2x">
+                        <div class="index-service-content">
+                            <h3 class="index-service-title">Manual terapiya</h3>
+                            <p class="index-service-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla ac metus placerat, pellentesque enim ac, rhoncus lectus. Maecenas et posuere lorem. Fusce sed massa sit amet elit viverra hendrerit.</p>
+                        </div>
+                    </li>
+                    <li class="index-services-item index-service">
+                        <img class="index-service-img" src="img/image 3.jpg" alt="Zuluk bilan davolash" width="200" height="200" srcset="img/image 3.jpg 1x, img/image 3@2x.jpg 2x">
+                        <div class="index-service-content">
+                            <h3 class="index-service-title">Zuluk bilan davolash</h3>
+                            <p class="index-service-description">Girudoterapiya (lot. hirūdō — «zuluk» va qad. yun. θεραπεία — «davolash») — ma’lum kasalliklarni dorivor zuluklar (Hirudo medicinalis) yordamida davolash usuli. Fizioterapevtik muolaja, muqobil tibbiyotga oid sanaladi. Bunday zuluklar ushbu kichik sinf chuvchalchanglariga oid yagona tur hisoblanadi, qolganlari shifobaxsh ta’sir ko’rsatmaydi.</p>
+                        </div>
+                    </li>
+                    <li class="index-services-item index-service">
+                        <img class="index-service-img" src="img/asal .jpg" alt="Tabiiy dori bilan davolash" width="200" height="200" srcset="img/asal .jpg 1x, img/asal@2x.jpg 2x">
+                        <div class="index-service-content">
+                            <h3 class="index-service-title">Tabiiy dori vositalari</h3>
+                            <p class="index-service-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla ac metus placerat, pellentesque enim ac, rhoncus lectus. Maecenas et posuere lorem. Fusce sed massa sit amet elit viverra hendrerit.</p>
+                        </div>
+                    </li>
+                </ul>
 
-                <a class="button" href="#">Qabulga yozilish</a>
+                <div class="index-services-actions">
+                    <a class="main-link" href="#">Qabulga yozilish</a>
+                </div>
             </div>
         </section>
         
