Add cta section. Add links to cta section.

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                         <li class="sitenav-item"><a class="sitenav-link" href="#">Blog</a></li>
                     </ul>
                 </nav>
-                <a class="main-link" href="#">Qabulga yozilish</a>
+                <a class="main-link" href="#index-cta">Qabulga yozilish</a>
             </div>
     </head>
 
@@ -50,7 +50,7 @@
                 <div class="hero-content">
                     <h2 class="hero-heading">Tabiiy davolash usullari yordamida kasalliklardan xalos bo’ling.</h2>
                     <p class="hero-text">Hijoma, manual terapiya, zuluk va turli tabiiy giyohlar eng ko’p uchraydigan kasalliklarni yengishda yordam beradi. Sog’ligingizni o’z ishining professionallariga ishonib topshiring.</p>
-                    <a class="main-link main-link-solid" href="#">Qabulga yozilish</a>
+                    <a class="main-link main-link-solid" href="#index-cta">Qabulga yozilish</a>
                 </div>
 
                 <img class="hero-img" src="img/hero-img.png" alt="Hero image" width="423" height="504" srcset="img/hero-img.png 1x, img/hero-img@2x.png 2x">
@@ -94,17 +94,21 @@
                 </ul>
 
                 <div class="index-services-actions">
-                    <a class="main-link" href="#">Qabulga yozilish</a>
+                    <a class="main-link" href="#index-cta">Qabulga yozilish</a>
                 </div>
             </div>
         </section>
+
+        <!-- CTA -->
         
-        <!-- Contact -->
-        
-        <section class="contact">
-            <h2 class="contact-title">Qabulga ro’yxatdan o’ting </h2>
-            <a class="contact-button" href="#">Qo'ng'iroq qilish</a>
-            <a class="contact-button" href="#">Telegramdan yozish</a>
+        <section class="cta" id="index-cta">
+            <div class="container">
+                <h2 class="cta-heading">Qabulga ro’yxatdan o’ting</h2>
+                <div class="cta-links">
+                    <a class="cta-links-item main-link main-link-outline" href="tel:+99890 333 22 26">Qo’ng’iroq qilish</a>
+                    <a class="cta-links-item main-link main-link-outline" href="https://t.me/https://t.me/ansormed" target="_blank">Telegramdan yozish</a>
+                </div>
+            </div>
         </section>
     </main>
 
