Correct element name

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     
     <!-- Header -->
 
-    <head class="site-header">
+    <header class="site-header">
             <div class="site-header-container container">
                 <a class="site-logo" href="#">
                     <img class="site-logo-img" src="img/logo-icon (1).svg" alt="AnsorMed logo">
@@ -38,7 +38,7 @@
                 </nav>
                 <a class="main-link" href="#index-cta">Qabulga yozilish</a>
             </div>
-    </head>
+    </header>
 
     <!-- Main -->
 
