Change css links and correct some drafts

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap" rel="stylesheet">
     <!-- Styles -->
-    <!-- <link rel="stylesheet" href="css/normalize.css"> -->
-    <!-- <link rel="stylesheet" href="css/styles.css"> -->
-    <link rel="stylesheet" href="css/styles.min.css">
+    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/styles.css">
+    <!-- <link rel="stylesheet" href="css/styles.min.css"> -->
 </head>
 <body>
     
@@ -137,10 +137,3 @@
 </body>
 </html>
 
-
-
-
-
-<!-- open sans 700, 400, 600
-    open sans condensed 700
-     -->
