Correct some mistakes

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     
     <!-- Header -->
 
-    <header class="site-header">
+    <header class="site-header" style="display: none;">
             <div class="site-header-container container">
                 <a class="site-logo" href="#">
                     <img class="site-logo-img" src="img/logo-icon (1).svg" alt="AnsorMed logo">
@@ -115,7 +115,7 @@
 
     <!-- Footer -->
 
-    <footer class="site-footer">
+    <footer class="site-footer" style="display: none;">
         <div class="site-footer-container container">
                 <a class="site-logo site-logo-site-footer" href="#">
                     <img class="site-logo-img" src="img/logo-icon (1).svg" alt="AnsorMed logo">
