Mkae site-footer responsive

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 
     <!-- Footer -->
 
-    <footer class="site-footer" style="display: none;">
+    <footer class="site-footer">
         <div class="site-footer-container container">
                 <a class="site-logo site-logo-site-footer" href="#">
                     <img class="site-logo-img" src="img/logo-icon (1).svg" alt="AnsorMed logo">
