--- a/index.html
+++ b/index.html
@@ -19,15 +19,15 @@
     
     <!-- Header -->
 
-    <header class="site-header" style="display: none;">
+    <header class="site-header">
             <div class="site-header-container container">
-                <a class="site-logo" href="#">
+                <a class="site-logo site-header-site-logo" href="#">
                     <img class="site-logo-img" src="img/logo-icon (1).svg" alt="AnsorMed logo">
                     <span class="site-logo-text">AnsorMed</span>
                 </a>
                 
                 <!-- Site Nav -->
-                <nav class="sitenav">
+                <nav class="site-header-sitenav sitenav">
                     <ul class="sitenav-list">
                         <li class="sitenav-item"><a class="sitenav-link" href="#">Xizmatlar</a></li>
                         <li class="sitenav-item"><a class="sitenav-link" href="#">Dorilar</a></li>
@@ -36,7 +36,9 @@
                         <li class="sitenav-item"><a class="sitenav-link" href="#">Blog</a></li>
                     </ul>
                 </nav>
-                <a class="main-link" href="#index-cta">Qabulga yozilish</a>
+                <a class="site-header-main-link main-link" href="#index-cta">Qabulga yozilish</a>
+
+                <button class="site-header-toggle-button" type="button">Menyu</button>
             </div>
     </header>
 
@@ -134,6 +136,8 @@
                 </nav>
             </div>
     </footer>
+
+    <script src="js/main.js"></script>
 </body>
 </html>
 
